fix :: insulin constraint and fix logic next activity